samples/_failures_safe/1761248897_a898b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9d852c8.c: In function ‘main’:
./samples/SAFE/__tmp_e9d852c8.c:140:23: error: missing terminating " character
  140 |     b.cols = read_int("
      |                       ^
./samples/SAFE/__tmp_e9d852c8.c:140:5: error: expected expression at end of input
  140 |     b.cols = read_int("
      |     ^
./samples/SAFE/__tmp_e9d852c8.c:140:14: error: too few arguments to function ‘read_int’
  140 |     b.cols = read_int("
      |              ^~~~~~~~
./samples/SAFE/__tmp_e9d852c8.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_e9d852c8.c:140:5: error: expected declaration or statement at end of input
  140 |     b.cols = read_int("
      |     ^
